gcc/testsuite/g++.dg/template/dtor2.C
struct Foo
{
    template <int i>
    ~Foo() {} // { dg-error "" }
};

int main()
{
   Foo f;
}
